# dioxus-maestro

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  package-lock.json  pyproject.toml  pyrightconfig.json  rustc-ice-2025-02-12T17_57_35-71791.txt
chrome-fastapi/: pyproject.toml  scrape.ipynb
chrome-fastapi/chrome_fastapi/: server.py
clients/chrome-fastapi/: Cargo.toml
clients/chrome-fastapi/src/: codegen.rs
clients/maestro-alpaca/: Cargo.toml
clients/maestro-alpaca/src/: get_client.rs  lib.rs  server_ctx.rs
clients/maestro-alpaca/src/api/: account.rs  account_activities.rs  account_config.rs  assets.rs  calendar.rs  clock.rs  mod.rs  order.rs  orders.rs  position.rs  watchlist.rs  watchlists.rs
clients/maestro-alpaca/src/data/: common.rs  mod.rs
clients/maestro-anthropic/: Cargo.toml
clients/maestro-anthropic/src/: chat_message.rs  client.rs  from_server.rs  full_client.rs  functions.rs  lib.rs  model.rs  prompt.rs  response.rs  stream.rs  tool.rs
clients/maestro-apalis/: Cargo.toml
clients/maestro-apalis/src/: acreate.rs  create.rs  lib.rs  server_ctx.rs
clients/maestro-diesel/: Cargo.toml
clients/maestro-diesel/src/: lib.rs  sync_client.rs
clients/maestro-diesel/src/async_client/: client.rs  from_server.rs  mod.rs
clients/maestro-serpapi/: Cargo.toml
clients/maestro-serpapi/src/: client.rs  functions.rs  lib.rs  request_type.rs  response_type.rs  routes.rs
clients/maestro-sqlx/: Cargo.toml
clients/maestro-sqlx/src/: acreate.rs  create.rs  lib.rs  pool.rs
clients/maestro-sqlx/src/async_client/: apalis_storage.rs
crates/maestro-ai/: Cargo.toml
crates/maestro-ai/src/: chat_message.rs  lib.rs  stream_ai.rs  use_ai_chat.rs
crates/maestro-clients/: Cargo.toml
crates/maestro-clients/src/: lib.rs  maestro_misanthropic.rs
crates/maestro-clients/src/maestro_diesel/: async_client.rs  async_types.rs  mod.rs  sync_client.rs  sync_types.rs
crates/maestro-clients/src/maestro_serpapi/: mod.rs
crates/maestro-clients/src/mastro_apalis/: apalis_storage_async.rs  apalis_storage_sync.rs  mod.rs
crates/maestro-diesel/: Cargo.toml
crates/maestro-diesel/src/sync_client/: client.rs
crates/maestro-sqlx/: Cargo.toml
crates/maestro-sqlx/src/: lib.rs  pool.rs
crates/maestro-sqlx/src/async_client/: mod.rs
crates/maestro-sqlx/src/sync_client/: apalis_storage.rs
crates/maestro-toast/: Cargo.toml
crates/maestro-toast/src/: id.rs  lib.rs  toast_frame_component.rs  toast_info.rs
crates/maestro-ui/: Cargo.toml
crates/maestro-ui/src/: label.rs  lib.rs  range.rs
demo/: Cargo.toml  Dioxus.toml  build.rs  diesel.toml  index.html  input.css  justfile  package-lock.json  package.json  tailwind.config.js  users.sql
demo-extension/builder/: Cargo.toml
demo-extension/builder/src/: main.rs
demo-extension/common/: Cargo.toml
demo-extension/common/src/: lib.rs
demo-extension/content/: Cargo.toml
demo-extension/content/src/: lib.rs
demo-extension/popup/: Cargo.toml  build.rs  input.css
demo-extension/popup/assets/: sw.js  tailwind.css
demo-extension/popup/src/: content_extractor.rs  lib.rs
demo/assets/: main.css  tailwind.css
demo/css/: toasts.css
demo/diesel_migrations/2025-03-03-112154_diesel_migrations/: up.sql
demo/sqlx_migrations/: 20250306063514_init.up.sql
demo/src/: layout.rs  lib.rs  main.rs  router.rs  routes.rs
demo/src/api/db/: diesel.rs  mod.rs  serpapi.rs  sqlx.rs
demo/src/clients/: mod.rs
demo/src/clients/db/: api.rs  diesel.rs  diesel_api.rs  diesel_demo.rs  diesel_schema.rs  mod.rs  sqlx.rs  sqlx_api.rs  sqlx_demo.rs
demo/src/clients/utilities/: alpaca_demo.rs  anthropic_demo.rs  apalis_api.rs  apalis_demo.rs  mod.rs  serpapi.rs  serpapi_api.rs  serpapi_demo.rs
demo/src/components/: backdrop.rs  logo_light.rs  mod.rs
demo/src/components/editor/: editor.rs
demo/src/components/form/: form_content.rs  form_field_wrapper.rs  form_state_debugger.rs
demo/src/components/forms/: form_content.rs  form_field_wrapper.rs  form_state_debugger.rs  mod.rs
demo/src/components/icons/: expand.rs
demo/src/components/layout/: demo_wrapper.rs  mod.rs
demo/src/components/query/: basic_query.rs  batch.rs  cache.rs  mod.rs  mutation.rs  parallel_query.rs
demo/src/components/ui/: component_section.rs  features.rs  mod.rs
demo/src/models/: user.rs
demo/src/pages/: buffer  calendar.rs  extras.rs  form.rs  forms.rs  home.rs  hooks.rs  mod.rs  not_found.rs  plotters.rs  query.rs  radio.rs  toast.rs  ui.rs
demo/src/pages/headless/: mod.rs
demo/src/pages/ui/: mod.rs
examples/: Cargo.toml  README
examples/src/: main.rs  routes.rs
examples/src/pages/: forms.rs
frontend/maestro-forms/: Cargo.toml
frontend/maestro-forms/src/: lib.rs  use_form_field.rs  use_formik.rs
frontend/maestro-forms/src/fields/: form.rs  (+3 more)
frontend/maestro-headless/: Cargo.toml
frontend/maestro-headless/src/: dialog.rs  focus_trap.rs  label.rs  lib.rs  multi_select.rs  spinner.rs  textarea.rs
frontend/maestro-hooks/: Cargo.toml
frontend/maestro-hooks/src/: clipboard.rs  explicit_memo.rs  lib.rs  pagination.rs
frontend/maestro-matomo/: Cargo.toml
frontend/maestro-matomo/src/: lib.rs  matomo.rs
frontend/maestro-plotters/: Cargo.toml
frontend/maestro-plotters/src/: bar_chart.rs  box_plot.rs  candle_stick.rs  chart_options.rs  heat_map.rs  lib.rs  line_map.rs  pie.rs  radar.rs  scatter_plot.rs  stacked_bar.rs
frontend/maestro-query/: Cargo.toml
frontend/maestro-query/src/: cached_result.rs  lib.rs  result.rs  use_mutation.rs  use_query.rs  use_query_client.rs
frontend/maestro-radio/: Cargo.toml
frontend/maestro-radio/src/: lib.rs  use_radio.rs
headless-demo/: Cargo.toml  Dioxus.toml  animations.css  input.css  package.json
headless-demo/assets/: tailwind.css
headless-demo/src/: layout.rs  lib.rs  main.rs  router.rs
headless-demo/src/components/: description_section.rs  example_code.rs  features_list.rs  mod.rs  props_table.rs  tables.rs  tabs.rs
headless-demo/src/pages/: mod.rs
maestro-themes-example/: Cargo.toml
maestro-themes-example/src/: main.rs
(+535 files in other folders)
