
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = []
dependencies = [
  "fastapi==0.115.12",
  "lxml==5.4.0",
  "pydantic==2.11.4",
  "pyhumps==3.8.0",
  "seleniumbase==4.38.2",
  "structlog==25.3.0",
  "uvicorn==0.34.2",
  "yarl==1.20.0",
]
name = "chrome-fastapi"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"
