[package]
authors = ["Stephen Oketch"]
edition = { workspace = true }
name = "demo"
version = "0.1.0"

[dependencies]
# local deps

# clients
api = { workspace = true, features = ["server"], optional = true }
chrome-fastapi = { workspace = true }
maestro-alpaca = { path = "../clients/maestro-alpaca", features = ["dioxus"] }
maestro-anthropic = { path = "../clients/maestro-anthropic", features = ["dioxus"] }
maestro-apalis = { path = "../clients/maestro-apalis", features = ["acreate", "create", "dioxus", "server"], optional = true }
maestro-diesel = { path = "../clients/maestro-diesel" }
maestro-serpapi = { path = "../clients/maestro-serpapi" }
maestro-sqlx = { path = "../clients/maestro-sqlx" }

# components and utilities
maestro-forms = { path = "../frontend/maestro-forms" }
maestro-hooks = { path = "../frontend/maestro-hooks" }
maestro-plotters = { path = "../frontend/maestro-plotters" }
maestro-query = { path = "../frontend/maestro-query" }
maestro-radio = { path = "../frontend/maestro-radio" }
maestro-toast = { path = "../frontend/maestro-toast", features = ["web"] }
maestro-ui = { path = "../frontend/maestro-ui" }


# thrird party deps
anyhow = "1.0.97"
apalis = { version = "0.5.5", features = ["cron", "postgres"], optional = true }
apalis-core = { version = "0.5.5", optional = true }
async-std = "1.13.1"
chrono = { workspace = true }
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
dioxus-free-icons.workspace = true
futures = "0.3.31"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
js-sys = "0.3.77"
log = "0.4.27"
plotters = { version = "0.3.7", default-features = false, features = [
  "all_elements",
  "all_series",
  "bitmap_backend",
  "bitmap_encoder",
  "bitmap_gif",
  "chrono",
  "colormaps",
  "deprecated_items",
  "full_palette",
  "image",
  "svg_backend",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
tailwind_fuse = { version = "0.3.2", features = ["variant"] }
validator = { version = "0.20.0", features = ["derive"] }
web-sys = "0.3.77"

tokio = { version = "1.44.2", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tokio-util = { version = "0.7.14", features = ["full", "tracing"], optional = true }

sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls", "uuid"], optional = true }

diesel = { version = "2.2.9", features = ["chrono", "numeric", "postgres", "serde_json", "uuid"], optional = true }
diesel-async = { version = "0.5.2", features = ["postgres"], optional = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"], optional = true }

uuid = { version = "1.16.0", features = ["serde", "v4"] }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
desktop = ["dep:apalis", "dioxus/desktop"]
dioxus = []
mobile = ["dep:apalis", "dioxus/mobile"]
server = [
  "dep:apalis",
  "dep:apalis-core",
  "dep:api",
  "dep:diesel",
  "dep:diesel-async",
  "dep:diesel-derive-enum",
  "dep:maestro-apalis",
  "dep:sqlx",
  "dep:tokio",
  "dep:tokio-stream",
  "dep:tokio-util",
  "dioxus/server",
  "maestro-alpaca/server",
  "maestro-anthropic/server",
  "maestro-diesel/async",
  "maestro-diesel/dioxus",
  "maestro-diesel/server",
  "maestro-diesel/sync",
  "maestro-serpapi/dioxus",
  "maestro-serpapi/server",
  "maestro-sqlx/acreate",
  "maestro-sqlx/create",
]
web = ["dioxus/web"]
