[package]
name = "maestro-demo"
version = "0.1.0"
edition = "2021"
description = "Demo app to showcase the maestro crate features"

[dependencies]
dioxus = { workspace = true }
dioxus-web = "0.6.1"
dioxus-router = "0.6.1"
log = "0.4"
wasm-logger = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
validator = { workspace = true }

# local deps
maestro-forms = { workspace = true }
maestro-sqlx = { workspace = true }
maestro-toast = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]

