[package]
authors = []
edition = "2024"
name = "headless-demo"
version = "0.1.0"

[dependencies]
# local deps

maestro-headless = { path = "../frontend/maestro-headless" }
maestro-toast = { path = "../frontend/maestro-toast", features = ["web"] }
maestro-ui = { path = "../frontend/maestro-ui" }


chrono = { workspace = true }
dioxus = { workspace = true, features = ["fullstack", "router"] }
dioxus-free-icons = { workspace = true }
dioxus-logger = { workspace = true }

async-std = "1.13.1"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
js-sys = "0.3.77"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tailwind_fuse = { version = "0.3.2", features = ["variant"] }
web-sys = "0.3.77"


[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
