[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "chrome-fastapi"
repository = { workspace = true }


[dependencies]
futures = "0.3.31"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }

prettyplease = { version = "0.2.32", optional = true }
progenitor = { git = "https://github.com/oxidecomputer/progenitor", optional = true }
syn = { version = "2.0.101", optional = true }

[features]
gen = ["dep:prettyplease", "dep:progenitor", "dep:syn"]

[[bin]]
features = ["gen"]
name = "gen"
