[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "maestro-alpaca"
repository = { workspace = true }


[dependencies]


anyhow = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }


diesel = { version = "2.2.10", features = ["chrono", "postgres", "serde_json", "uuid"], optional = true }
diesel-async = { version = "0.5.2", features = ["postgres"], optional = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"], optional = true }

reqwest = { version = "0.12.15", optional = true, features = ["json"] }

dioxus = { workspace = true, features = ["fullstack"], optional = true }
dioxus-logger = { workspace = true, optional = true }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
dioxus = ["dep:dioxus", "dep:dioxus-logger"]
server = ["dep:diesel", "dep:diesel-async", "dep:diesel-derive-enum", "dep:reqwest"]
