[package]
authors = []
description = ""
edition = { workspace = true }
license = ""
name = "maestro-anthropic"
repository = ""
version = "0.1.0"


[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }

chrono = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }

futures = { workspace = true }

derive_more = { version = "2.0.1", features = ["display", "from", "is_variant"] }

dioxus = { version = "0.6.3", features = ["fullstack"], optional = true }
eventsource-stream = { version = "0.2.3", optional = true }
reqwest = { version = "0.12.15", features = ["json", "stream"], optional = true }
static_assertions = { version = "1.1.0", optional = true }
thiserror = { version = "2.0.12", optional = true }
tokio = { version = "1.45.0", optional = true }
zeroize = { version = "1.8.1", features = ["derive"], optional = true }

[features]
dioxus = ["dep:dioxus"]
server = ["dep:eventsource-stream", "dep:reqwest", "dep:static_assertions", "dep:thiserror", "dep:tokio", "dep:zeroize", "dioxus?/server"]
