[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "maestro-apalis"
repository = { workspace = true }


[dependencies]
maestro-sqlx = { path = "../maestro-sqlx" }

bon = { workspace = true }
serde = { workspace = true }

apalis = { version = "0.5.5", features = ["cron", "postgres"], optional = true }
tokio = { version = "1.45.0", optional = true }

dioxus = { workspace = true, features = ["fullstack", "server"], optional = true }

[features]
acreate = ["dep:apalis", "maestro-sqlx/acreate"]
create = ["acreate", "dep:tokio", "maestro-sqlx/create"]
dioxus = ["dep:dioxus", "server"]
server = ["dep:apalis"]
