[package]
authors = []
description = ""
edition = { workspace = true }
license = ""
name = "maestro-apalis"
repository = ""
version = "0.1.0"

[dependencies]
maestro-sqlx = { path = "../maestro-sqlx" }

bon = { workspace = true }
serde = { workspace = true }

apalis = { version = "0.7.2", default-features = false, features = ["limit"], optional = true }
apalis-core = "0.7.2"
apalis-sql = { version = "0.7.2", features = ["postgres", "tokio-comp"], optional = true }
tokio = { version = "1.46.1", optional = true }

dioxus = { workspace = true, features = ["fullstack", "server"], optional = true }

[features]
acreate = ["dep:apalis", "maestro-sqlx/acreate"]
create = ["acreate", "dep:tokio", "maestro-sqlx/create"]
dioxus = ["dep:dioxus", "server"]
server = ["dep:apalis", "dep:apalis-sql"]
