[package]
authors = []
description = ""
edition = { workspace = true }
license = ""
name = "maestro-diesel"
repository = ""
version = "0.1.0"


[dependencies]
bon = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }

diesel = { version = "2.2.10", features = ["chrono", "postgres", "serde_json", "uuid"], optional = true }
diesel-async = { version = "0.5.2", features = ["deadpool", "pool", "postgres"], optional = true }

dioxus = { version = "0.6.3", features = ["fullstack"], optional = true }


[features]
async = ["dep:diesel-async", "server"]
dioxus = ["dep:dioxus"]
sync = ["diesel/r2d2", "server"]

server = ["dep:diesel", "dioxus?/server"]
