[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "maestro-serpapi"
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
chrome-fastapi = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }

dioxus = { workspace = true, features = ["fullstack"], optional = true }
dioxus-logger = { workspace = true, optional = true }
readability-rs = { version = "0.5.0" }
reqwest = { version = "0.12.15", features = ["json", "multipart"], optional = true }

tokio-retry2 = { version = "0.5.7", optional = true }

[features]
dioxus = ["dep:dioxus", "dep:dioxus-logger"]
server = ["dioxus?/server", "reqwest", "tokio-retry2"]
