[package]
authors = []
description = ""
edition = { workspace = true }
license = ""
name = "maestro-sqlx"
repository = ""


[dependencies]
serde = { workspace = true }

sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"], optional = true }
tokio = { version = "1.44.1", features = ["full"], optional = true }

[features]
acreate = ["dep:sqlx"]
create = ["acreate", "dep:tokio"]
