[package]
authors = []
description = ""
edition = { workspace = true }
license = ""
name = "maestro-sqlx"
repository = ""
version = "0.1.0"

[dependencies]
serde = { workspace = true }

sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"], optional = true }
tokio = { version = "1.45.0", features = ["full"], optional = true }

[features]
acreate = ["dep:sqlx"]
create = ["acreate", "dep:tokio"]
