[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "maestro-sqlx"
repository = { workspace = true }


[dependencies]
serde = { workspace = true }

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"], optional = true }
tokio = { version = "1.45.0", features = ["full"], optional = true }

[features]
acreate = ["dep:sqlx"]
create = ["acreate", "dep:tokio"]
