[package]
authors = []
description = ""
edition = "2021"
license = ""
name = "maestro-ai"
repository = ""


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

dioxus = { workspace = true }
futures = { version = "0.3.31" }

misanthropic = { version = "0.5.1", optional = true }
tokio = { version = "1.42.0", optional = true }

[features]
server = ["dep:misanthropic", "dep:tokio", "dioxus/server"]
