[package]
authors = []
description = ""
edition = "2021"
license = ""
name = "maestro-clients"
repository = ""


[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }

apalis = { version = "0.5.5", features = ["cron", "postgres"], optional = true }
diesel = { version = "2.2.6", features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"], optional = true }
diesel-async = { version = "0.5.2", features = ["deadpool", "pool", "postgres"], optional = true }
misanthropic = { version = "0.5.1", optional = true }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"], optional = true }
tokio = { version = "1.42.0", optional = true }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
apalis = ["dep:apalis", "dep:tokio", "sqlx"]
diesel-async = ["dep:diesel-async"]
diesel-sync = ["dep:diesel"]
misanthropic = ["dep:misanthropic"]
serpapi = []
sqlx = ["dep:sqlx"]
