[package]
authors = []
description = ""
edition = "2021"
license = ""
name = "maestro-ui"
repository = ""


[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }

dioxus = { workspace = true }
dioxus-free-icons = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }

tailwind_fuse = { workspace = true }

tracing-wasm = { version = "0.2.1", optional = true }


[features]
default = []
desktop = ["dioxus/desktop"]
web = ["chrono/wasmbind", "dep:tracing-wasm", "dioxus/web", "uuid/js"]
