[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "extension-builder"
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
lowdash = { version = "0.5.3" }
more-itertools = { version = "0.1.6" }
notify = { version = "8.0.0" }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

[lints]
workspace = true
