[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "common"
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { workspace = true, features = ["wasmbind"] }

anyhow = { workspace = true }
bon = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true, features = ["js", "serde", "v4"] }
