[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "popup"
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
common = { path = "../common" }

maestro-toast = { workspace = true }
maestro-ui = { workspace = true }


gloo-utils = "0.2.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "console"] }

readability-rs = "0.5.0"

chrono = { workspace = true, features = ["wasmbind"] }
dioxus = { workspace = true, features = ["web"] }
dioxus-free-icons = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true, features = ["timing"] }
dioxus-web = "0.6.3"
futures = { workspace = true }
markdown-to-html = { workspace = true }
plotters = { workspace = true }
plotters-canvas = { workspace = true }
tailwind_fuse = { workspace = true }
tracing-wasm = { version = "0.2.1" }
url = { workspace = true }

anyhow = { workspace = true }
bon = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true, features = ["js", "serde", "v4"] }

maestro-hooks = { workspace = true }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = [
  "macros",
] }
