[package]
authors = []
description = ""
edition = { workspace = true }
license = ""
name = "maestro-forms"
repository = ""


[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maestro-toast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

dioxus = { workspace = true }
dioxus-free-icons = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }

tailwind_fuse = { workspace = true }

tracing-wasm = { version = "0.2.1", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.77", features = ["Clipboard", "Navigator", "Window"], optional = true }


[features]
default = []
desktop = ["dioxus/desktop"]
web = ["chrono/wasmbind", "dep:tracing-wasm", "dep:wasm-bindgen-futures", "dep:web-sys", "dioxus/web", "uuid/js"]
