[package]
authors = []
description = ""
edition = "2024"
license = ""
name = "maestro-headless"
repository = ""


[dependencies]
bon = { workspace = true }
chrono = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }

dioxus = { workspace = true }
dioxus-free-icons = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-sdk = { workspace = true }

async-std = "1.13.0"
tailwind_fuse = { workspace = true }

tracing-wasm = { version = "0.2.1", optional = true }
web-sys = { version = "0.3.76", features = [
  "CssStyleDeclaration",
  "Document",
  "MutationObserver",
  "MutationObserverInit",
  "MutationRecord",
  "NodeFilter",
  "TreeWalker",
  "Window",
] }

[features]
default = []
desktop = ["dioxus/desktop"]
web = ["chrono/wasmbind", "dep:tracing-wasm", "dioxus/web", "uuid/js"]
